[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Background/Title_1080p.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Title/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Title/HeaderFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Title/Title.gd" type="Script" id=4]
[ext_resource path="res://Transitions/BoxInAndOut.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Items/Coin.128px.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/joystix.monospace.ttf"

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/InstructionsContainer/GridContainer/MarginContainer3/StartLabel:custom_colors/font_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/InstructionsContainer/GridContainer/MarginContainer3/StartLabel:custom_colors/font_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/InstructionsContainer/GridContainer/MarginContainer3/StartLabel:custom_colors/font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/InstructionsContainer/GridContainer/MarginContainer3/StartLabel:custom_colors/font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.4, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Title_1080p" type="Sprite" parent="."]
position = Vector2( 1.52637, 0 )
texture = ExtResource( 1 )
centered = false

[node name="EasyCoin" type="Sprite" parent="."]
position = Vector2( 850.935, 689.751 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="MediumCoin" type="Sprite" parent="."]
position = Vector2( 850.935, 761.049 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="HardCoin" type="Sprite" parent="."]
position = Vector2( 850.935, 831.565 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InstructionsContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 480
custom_constants/margin_top = 580
custom_constants/margin_left = 480
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/InstructionsContainer"]
margin_left = 480.0
margin_top = 580.0
margin_right = 1440.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InstructionsContainer/GridContainer"]
margin_right = 960.0
margin_bottom = 114.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer"]
margin_right = 960.0
margin_bottom = 114.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HOW TO PLAY"
align = 1

[node name="Label4" type="Label" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 960.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Try to avoid the covidiots and reach the boat to escape the beach. If you encounter a covidiot, type out the on screen message within the time limit to disperse them."
align = 1
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/InstructionsContainer/GridContainer"]
margin_top = 118.0
margin_right = 960.0
margin_bottom = 281.0
size_flags_horizontal = 3
custom_constants/margin_top = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer2"]
margin_top = 15.0
margin_right = 960.0
margin_bottom = 163.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_right = 960.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONTROLS"
align = 1

[node name="Label3" type="Label" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 49.0
margin_right = 960.0
margin_bottom = 148.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move Left: A, Left Arrow
Move Right: D, Right Arrow
Jump: Space Bar"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/InstructionsContainer/GridContainer"]
margin_top = 285.0
margin_right = 960.0
margin_bottom = 374.0
custom_constants/margin_top = 50

[node name="StartLabel" type="Label" parent="CanvasLayer/InstructionsContainer/GridContainer/MarginContainer3"]
margin_top = 50.0
margin_right = 960.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PRESS ANY KEY TO START"
align = 1

[node name="DifficultyContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 480
custom_constants/margin_top = 580
custom_constants/margin_left = 480
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/DifficultyContainer"]
margin_left = 480.0
margin_top = 580.0
margin_right = 1440.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/DifficultyContainer/GridContainer"]
margin_right = 960.0
margin_bottom = 267.0
size_flags_horizontal = 3
custom_constants/margin_top = 15
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DifficultyContainer/GridContainer/MarginContainer2"]
margin_top = 15.0
margin_right = 960.0
margin_bottom = 267.0
custom_constants/separation = 40
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CanvasLayer/DifficultyContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_right = 960.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHOOSE DIFFICULTY"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="CanvasLayer/DifficultyContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 79.0
margin_right = 960.0
margin_bottom = 110.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Easy"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label4" type="Label" parent="CanvasLayer/DifficultyContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 150.0
margin_right = 960.0
margin_bottom = 181.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Medium"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Hard" type="Label" parent="CanvasLayer/DifficultyContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 221.0
margin_right = 960.0
margin_bottom = 252.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hard"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/DifficultyContainer/GridContainer"]
margin_top = 271.0
margin_right = 960.0
margin_bottom = 402.0
custom_constants/margin_top = 50
__meta__ = {
"_edit_lock_": true
}

[node name="StartLabel" type="Label" parent="CanvasLayer/DifficultyContainer/GridContainer/MarginContainer3"]
margin_top = 50.0
margin_right = 960.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "USE UP / DOWN TO CHANGE SELECTION
PRESS SPACE BAR TO SELECT"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -62.0
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer2"]
margin_right = 1920.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Programming, art and sfx by @robthefivenine
Music by Loyalty Freak Music"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 3 )

[node name="Transition" parent="." instance=ExtResource( 5 )]
[connection signal="game_starting" from="." to="Transition" method="blank"]
[connection signal="blanked" from="Transition" to="." method="_on_Transition_blanked"]
